# genesis

./: Cargo.toml  Dockerfile  INFRASTRUCTURE.md  README-AGENT.md  README-LLM-AGENT.md  README.md  deploy-argocd.sh  get-kubeconfig.sh  run-smart-home-order.sh  update-hosts.sh
.github/workflows/: build-llm-agent.yml
gitops/argocd/: ingress.yaml  values.yaml
k8s/: smart-home-llm-job.yaml
src/: llm_agent.rs  main.rs
