[package]
name = "smart-home-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smart-home-agent"
path = "src/main.rs"

[[bin]]
name = "smart-home-llm"
path = "src/llm_agent.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
